src/test/deca/context/invalid/created/Objet/Passe_3/TooManyArguments.deca
// Description:
//    teste un method call avec trop d'arguments
// Resultats:
//    Erreur contextuelle
//    Ligne 15 : Error: Too many arguments in method call

class A {
    int m(float a, boolean b) {
        return 3;
    }
}

{
    A a = new A();
    int x = a.m(3, true, 4);
}